[package]
name = "crawler"
version = "0.1.0"
authors = ["metalwarrior665 <lukaskrivka@gmail.com>"]
edition = "2018"

[dependencies]
rayon = "1.0.3"
reqwest = {version = "0.10.1", features = ["blocking", "gzip"]}
serde_json = "1.0"
scraper = "0.11.0"
serde = "1.0"
serde_derive = "1.0"
async-std = "1.5.0"
tokio = {version = "0.2.11", features = ["full"]}
futures = "0.3.4"
lazy_static = "^1.4.0"
rand = "0.3"

